Methods for update and delete movies, Logout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/movieCollection?serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=JAVA_33_34
-spring.datasource.password=JAVA_33_34
+spring.datasource.username=root
+spring.datasource.password=Mandarin2727!
