--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/movieCollection?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Mandarin2727!
+spring.datasource.password={password}
