online database connection, code cleaning

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 server.port=80
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/movieCollection?serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=JAVA_33_34
-spring.datasource.password=JAVA_33_34
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_movieCollection?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=freedb_nastya
+spring.datasource.password=qyNQqPs3%ZFa$Kr
+#spring.datasource.url=jdbc:mysql://localhost:3306/movieCollection?serverTimezone=UTC&createDatabaseIfNotExist=true
+
