--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=80
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_movieCollection?serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.username=freedb_nastya
-spring.datasource.password=qyNQqPs3%ZFa$Kr
-#spring.datasource.url=jdbc:mysql://localhost:3306/movieCollection?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/movieCollection?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password={password}
+
 
